--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   </tr>
 </table>
 
-<h2 hidden>Game over for you!</h2>
+<h2 hidden>Game over for you! Loser.</h2>
 ohfweiwpwhe
 <script>
   // Initialization
