--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </table>
 
 <h2 hidden>Game over for you! Loser.</h2>
-ohfweiwpwhe
+ohfweiwpwhec
 <script>
   // Initialization
   const boxes = Array.from(document.querySelectorAll("td"));
